# HomeWork_Volkov92

./: README.md  pyproject.toml  test_log.txt
main/: main.py
src/: Utils.py  decorators.py  external_api.py  generators.py  masks.py  processing.py  read_csv.py  read_xlsx.py  sort.py  utils.py  widget.py
tests/: conftest.py  test_decorators.py  test_func.py  test_generators.py  test_log.txt  test_processing.py  test_read_csv.py  test_read_xlsx.py  test_sort.py  test_transactions_csv.csv  test_utils.py
